--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.9.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.34.0",
     "react-loader-spinner": "^5.1.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
