--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 products.doc
 correcciones.doc
+README.md
+read.md
 # dependencies
 /node_modules
 /.pnp
